# gecko

./: .arcconfig  .clang-format-ignore  .cron.yml  .eslintignore  .hgignore  README.txt  mach  old-configure.in
@types/: gecko-mocks.d.ts  xpcom.d.ts
@types/webidl/: webidl.d.ts
@types/xpcom/: idl.d.ts  interface_lists.d.ts  types.d.ts
accessible/basetypes/: Accessible.h
browser/: confvars.sh  moz.build
browser/actors/: ContentCacheChild.jsm  ContentCacheChild.sys.mjs  ContentCacheParent.jsm  ContentCacheParent.sys.mjs  ContextMenuChild.jsm  ContextMenuParent.jsm  DecoderDoctorParent.jsm  DownloadsCommonChild.jsm  DownloadsCommonParent.jsm  EncryptedMediaParent.jsm  EngagementChild.jsm  EngagementParent.jsm  PluginParent.jsm  WebRTCParent.jsm  moz.build
browser/base/: jar.mn  moz.build
browser/components/: BrowserContentHandler.jsm  BrowserGlue.jsm  BrowserGlue.sys.mjs  metrics.yaml  moz.build
browser/fonts/: moz.build
browser/installer/: allowed-dupes.mn
browser/locales/: Makefile.in  jar.mn  l10n-changesets.json
browser/locales-preview/: translations.ftl
browser/modules/: AsyncTabSwitcher.jsm  BrowserUsageTelemetry.jsm  BrowserWindowTracker.jsm  ContentCrashHandlers.jsm  FaviconLoader.jsm  OpenInTabsUtils.jsm  PermissionUI.jsm  SiteDataManager.jsm  (+5 more)
chrome/: nsChromeProtocolHandler.cpp  nsChromeRegistryChrome.cpp
intl/l10n/rust/fluent-ffi/: Cargo.toml
intl/l10n/rust/fluent-ffi/src/: bundle.rs
supply-chain/: audits.toml
tools/: moz.build
widget/: TextRecognition.cpp  nsBaseWidget.cpp  nsNativeBasicThemeAndroid.cpp  nsXPLookAndFeel.cpp
(+1421 files in other folders)
